--- a/package.json
+++ b/package.json
@@ -1,31 +1,53 @@
 {
-  "name": "training",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "training",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@types/lodash": "^4.14.146",
+        "@types/node": "^12.12.7",
+        "@types/react": "16.9.11",
+        "@types/react-dom": "16.9.4",
+        "@types/react-responsive": "^8.0.2",
+        "@types/react-router-dom": "^5.1.2",
+        "axios": "^0.19.0",
+        "mobx": "^5.15.0",
+        "mobx-react": "^6.1.4",
+        "react": "^16.12.0",
+        "react-dom": "^16.12.0",
+        "react-responsive": "^8.0.1",
+        "react-router": "^5.1.2",
+        "react-scripts": "3.2.0",
+        "semantic-ui-css": "^2.4.1",
+        "semantic-ui-react": "^0.88.2",
+        "typescript": "^3.7.2"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "@babel/core": "^7.7.2",
+        "@babel/plugin-proposal-decorators": "^7.7.0",
+        "@babel/preset-env": "^7.7.1",
+        "babel-loader": "^8.0.6",
+        "mobx": "^5.15.0",
+        "react-router-dom": "^5.1.2"
+    }
 }
